# monopolybot

./: CMakeLists.txt  Makefile  README.md  main  run.sh  test.sh
MonopolyCore/: CMakeLists.txt
MonopolyCore/src/controllers/: Board.cpp  Player.cpp  Property.cpp
MonopolyCore/src/csv/: CsvManager.cpp
MonopolyCore/src/models/: Building.hpp  Chance.hpp  Community.hpp  Corner.hpp  Hotel.hpp  Parole.hpp  Railroad.hpp  Special.hpp  Street.hpp  Utility.hpp
MonopolyMain/: CMakeLists.txt
MonopolyMain/src/: main.cpp  main.hpp
MonopolyTests/: CMakeLists.txt
MonopolyTests/src/: test.cpp
Resources/: properties.csv
src/: SumIntegers.cpp  SumIntegers.hpp  main.cpp  properties.csv
src/csv/: CsvManager.cpp  CsvManager.h
src/models/: Board.hpp  House.hpp  Parole.hpp  Player.hpp  Property.hpp  Tax.hpp  Token.hpp
src/views/: Property.cpp
test/: test.cpp
